tests/baselines/reference/enumNoInitializerFollowsNonLiteralInitializer.errors.txt
bad.ts(4,5): error TS18056: Enum member following a non-literal numeric member must have an initializer when 'isolatedModules' is enabled.
bad.ts(7,5): error TS1061: Enum member must have initializer.


==== ./helpers.ts (0 errors) ====
    export const foo = 2;
    
==== ./bad.ts (2 errors) ====
    import { foo } from "./helpers";
    enum A {
        a = foo,
        b,
        ~
!!! error TS18056: Enum member following a non-literal numeric member must have an initializer when 'isolatedModules' is enabled.
        c = 10,
        d = (c)! satisfies number as any,
        e,
        ~
!!! error TS1061: Enum member must have initializer.
    }
    
==== ./good.ts (0 errors) ====
    import { foo } from "./helpers";
    enum A {
        a = foo,
        b = 3,
    }
    enum B {
        a = 1 + 1,
        b,
    }
    enum C {
        a = +2,
        b,
    }
    enum D {
        a = (2),
        b,
    }
    enum E {
        a,
        b,
        c = a,
        d,
        e = d | b,
        f,
    }
    